2015-02-19  Natalia Portillo  <claunia@claunia.com>

	* plist-cil.sln:
	  Added test files

2015-02-16  Natalia Portillo  <claunia@claunia.com>

	* plist-cil.sln:
	  Initial commit

2015-02-16  Natalia Portillo  <claunia@claunia.com>

	* .gitignore:
	* plist-cil.sln:
	  Initial commit
