@@ -3,23 +3,7 @@ Microsoft Visual Studio Solution File, Format Version 12.00
 # Visual Studio 2012
 Project("{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}") = "plist-cil", "plist-cil\plist-cil.csproj", "{5EA40CD5-CB98-4FD5-8628-3B399EACB38B}"
 EndProject
-Project("{2150E333-8FDC-42A3-9474-1A3956D46DE8}") = "test-files", "test-files", "{67533069-B704-481F-A0FA-7EDAA01C927E}"
-	ProjectSection(SolutionItems) = preProject
-		test-files\test1-ascii-gnustep.plist = test-files\test1-ascii-gnustep.plist
-		test-files\test1-ascii.plist = test-files\test1-ascii.plist
-		test-files\test1.plist = test-files\test1.plist
-		test-files\testNegative-bin.plist = test-files\testNegative-bin.plist
-		test-files\testNegative-xml.plist = test-files\testNegative-xml.plist
-		test-files\issue4.plist = test-files\issue4.plist
-		test-files\issue16.plist = test-files\issue16.plist
-		test-files\issue21.plist = test-files\issue21.plist
-		test-files\issue22-emoji-xml.plist = test-files\issue22-emoji-xml.plist
-		test-files\issue22-emoji.plist = test-files\issue22-emoji.plist
-		test-files\issue30.plist = test-files\issue30.plist
-		test-files\issue33.pbxproj = test-files\issue33.pbxproj
-		test-files\issue49.plist = test-files\issue49.plist
-		test-files\test-ascii.plist = test-files\test-ascii.plist
-	EndProjectSection
+Project("{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}") = "plist-cil.test", "plist-cil.test\plist-cil.test.csproj", "{36AD4394-6A31-465F-BE8E-E4806A89CC38}"
 EndProject
 Global
 	GlobalSection(SolutionConfigurationPlatforms) = preSolution
@@ -27,12 +11,14 @@ Global
 		Release|Any CPU = Release|Any CPU
 	EndGlobalSection
 	GlobalSection(ProjectConfigurationPlatforms) = postSolution
+		{36AD4394-6A31-465F-BE8E-E4806A89CC38}.Debug|Any CPU.ActiveCfg = Debug|Any CPU
+		{36AD4394-6A31-465F-BE8E-E4806A89CC38}.Debug|Any CPU.Build.0 = Debug|Any CPU
+		{36AD4394-6A31-465F-BE8E-E4806A89CC38}.Release|Any CPU.ActiveCfg = Release|Any CPU
+		{36AD4394-6A31-465F-BE8E-E4806A89CC38}.Release|Any CPU.Build.0 = Release|Any CPU
 		{5EA40CD5-CB98-4FD5-8628-3B399EACB38B}.Debug|Any CPU.ActiveCfg = Debug|Any CPU
 		{5EA40CD5-CB98-4FD5-8628-3B399EACB38B}.Debug|Any CPU.Build.0 = Debug|Any CPU
 		{5EA40CD5-CB98-4FD5-8628-3B399EACB38B}.Release|Any CPU.ActiveCfg = Release|Any CPU
 		{5EA40CD5-CB98-4FD5-8628-3B399EACB38B}.Release|Any CPU.Build.0 = Release|Any CPU
-	EndGlobalSection
-	GlobalSection(NestedProjects) = preSolution
 	EndGlobalSection
 	GlobalSection(MonoDevelopProperties) = preSolution
 		Policies = $0
