@@ -1,6 +1,11 @@
 2015-02-19  Natalia Portillo  <claunia@claunia.com>
 
 	* plist-cil.sln:
+	  Add test skeleton.
+
+2015-02-19  Natalia Portillo  <claunia@claunia.com>
+
+	* plist-cil.sln:
 	  Added test files
 
 2015-02-16  Natalia Portillo  <claunia@claunia.com>
